--- a/asset/Cultural.html
+++ b/asset/Cultural.html
@@ -43,21 +43,37 @@
                 <i class="ti-search"></i>
             </div>
         </div>
-                <div id="footer">
-                    <div class="footer-contact text-center">
-                        <div class="footer-list">
-                            <ul>
-                              <li class="col col-5 contact-icon"><a href="#"><i class="ti-instagram"></i></a></li>
-                              <li class="col col-5 contact-icon"><a href="#"><i class="ti-facebook"></i></a></li>
-                              <li class="col col-5 contact-icon"><a href="#"><i class="ti-pinterest"></i></a></li>
-                              <li class="col col-5 contact-icon"><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                              <li class="col col-5 contact-icon"><a href="#"><i class="ti-youtube"></i></a></li>
-                            </ul>   
-                        </div>
-                    </div>
-                    <div class="footer-nav">
+        <div class="content-cutural">
+            <h1 class="content-heading">Kon Tum - sự trỗi dậy của đại ngàn</h1>
+            <h3>Nằm ở cực Bắc Tây Nguyên, cùng với Đăk Lăk, Gia Lai, Đăk Nông, Lâm Đồng, Kon Tum làm nên trái tim Tây Nguyên hùng vĩ, là biểu tượng của sự vững chãi của khí phách kiên cường và niềm tự hào của dân tộc.</h3><br>
+            <p>Là một trong những cái nôi của văn hoá Tây Nguyên, Kon Tum hội tụ những bản sắc văn hoá riêng biệt với những phong tục tập quán đặc thù như lễ hội cồng chiêng, lễ hội ăn trầu, lễ bỏ mã, lễ mừng lúa mới... tưng bừng với những bản trường ca hùng tráng đang đón đợi. Kon Tum khoác lên mình chiếc áo màu xanh của đại ngàn, điểm thêm vẻ hùng vĩ của non cao, thác lớn gieo vào lòng những ai lần đầu tiên đến nơi này xúc cảm tự hào trước cảnh hoành tráng nhưng đầy thơ mộng của vùng đất này.</p><br>
+            <p>Kon Tum từng được du khách đánh giá là tỉnh có nhiều điểm tham quan đặc sắc vào bậc nhất Tây Nguyên. Nằm ở phía Bắc cao nguyên trung phần Việt Nam, Kon Tum là vùng đất có quá trình hình thành và phát triển lâu đời gắn liền với lịch sử đấu tranh chống ngoại xâm, mà bằng chứng là những di tích lịch sử đã được xếp hạng quốc gia như ngục Kon Tum, ngục Đak Glei, những địa danh nổi tiếng như đồi Sạc Ly, Đắk Tô-Tân Cảnh, đường mòn Hồ Chí Minh huyền thoại. Bên cạnh đó còn có những công trình lịch sử, văn hóa, kiến trúc cổ như nhà thờ gỗ, tòa Giám mục; chùa Bác Ái…</p><br>
+            <p>Thiên nhiên ưu dãi cho Kon Tum nhiều thắng cảnh đẹp khi có rừng thông Măng Đen được ví như “Đà Lạt thứ hai” với những đồi thông ngút ngàn chạy dài theo sườn núi, vườn quốc gia Chư Mom Ray mang tầm vóc đông Nam Á, thác Đăk Nghé cheo leo ghềnh đá, thác Nàng Tiên thơ mộng và cầu treo Kon Klor làm cầu nối cho những buôn làng.</p><br>
+            <p>Kon Tum còn có sông Đăk Bla hiền hoà, có suối nước nóng Đăc Tô làm ấm lòng du khách, và những mái nhà rông lặng lễ ẩn hiện giữa áng may trôi mơ màng. Đến với Kon Tum là đến với những trang sử vẻ vang hào hùng của người Tây Nguyên, nơi đó có di tích Đăk Tô oai hùng, có ngục Đăk Glei hào khí một thời, có đường mòn Hồ Chí Minh làm nên lịch sử... tất cả tô điểm cho Kon Tum huyền ảo và oai hùng tự ngàn xưa.</p><br>
+            <p>Đồng bào dân tộc ở Tây Nguyên nói chung và Kon Tum nói riêng sinh ra đã sống trong tiếng cồng tiếng chiêng, khi trưởng thành tiếng cồng tiếng chiêng lại theo chân họ lên nương lên rẫy, rồi tiếp tục ngân vang những lúc được mùa. Đến khi về cõi vĩnh hằng, người Tây Nguyên cũng được tiếng chiêng, tiếng cồng đưa tiễn...tất cả những điều ấy từ lâu đã in sâu vào đời sống tinh thần của người Tây Nguyên, với họ cồng, chiêng, là tài sản vô giá không có gì đánh đổi được.</p><br>
+            <p>Hội làng, đình đám là không gian của tiếng cồng tiếng chiêng. Lễ tết, ngày mùa là lúc để tiếng cồng tiếng chiếng vang lên những giai điệu đặc trưng của núi rừng, tuy hoang sơ nhưng nhiệt thành, tuy sôi nổi tưng bừng nhưng lắng đọng mãi mãi trong tâm hồn người thưởng thức. Đến Kon Tum, say bên những ghè rượu cần, rộn rã cùng những điệu múa dân gian và sống trong bầu không khí cồng chiêng vô cùng linh thiêng và hùng tráng là những cảm xúc thú vị mà ai cũng muốn được một lần khám phá.</p><br>
+            <p>Đến với Kon Tum, bạn sẽ tìm được câu trả lời ngọn nguồn cho những phong tục tập quán, những tín ngưỡng đặc thù, về mối quan hệ mật thiết tồn tại từ ngàn xưa giữa thiên nhiên và đời sống tâm linh con người. Tuỳ theo từng lễ hội, người ta sẽ gửi gắm vào trong đó niềm tự hào, sự lạc quan và những dự định về một tương lai tốt đẹp.</p><br>
+            <p>Đến Kon tum, bạn sẽ được tự do hoà nhập và khám phá nhiều điều kỳ thú. Và trong hành trang của mỗi người không thể thiếu những món quà từ núi rừng Tây Nguyên. Những món quà tuy đơn sơ, dung dị nhưng ẩn chứa tấm lòng của người dân miền sơn nước.</p><br>
+            <p>Những ché rượu cần thơm nồng, là sự kết hợp của sản phẩm núi rừng tạo nên, nó chất chứa thứ men cảu vạn vật thiên nhiên kết hợp với tình đất và tình người của xứ sở này. Vì thế rượu cần có hương vị hấp dẫn, không quá nồng, chỉ dìu dịu, cay cay, ngòn ngọt đủ để làm say mê lòng người. Cách uống rượu cần cũng rất đặc biệt mang tính cộng đồng cao, đó là cùng một lúc rất nhiều người , mỗi người cầm cây cần hút chung một ghè. Rượu cần không thể thiếu trong đời sống người dân núi rừng Tây Nguyên, và là món quà ý nghĩa của du khách trong hành trang trở về từ đại ngàn.</p><br>
+            <p>Từ bao đời nay, đồng bào các dân tộc ở Kon Tum luôn mở rộng tấm lòng đón khách. Mỗi dân tộc có một nét văn hóa đặc sắc riêng. Ở đây du khách sẽ được chiêm ngưỡng những buôn làng, những ngôi nhà truyền thống; những lễ hội đậm nét dân gian như lễ hội cồng chiêng, lễ hội đâm trâu mừng lúa mới, tham gia vào những tour du lịch sinh thái, lang thang trong những khu rừng còn nguyên vẹn sự hoang sơ, hùng vĩ…</p>
+            <img src="../File-anh.img/footer-cutural.jpg" alt="Thành phố Kon Tum">
+            <p class="img-title">Thành Phố Kon Tum</p>
+        </div>
+        <div id="footer">
+            <div class="footer-contact text-center">
+                <div class="footer-list">
+                    <ul>
+                        <li class="col col-5 contact-icon"><a href="#"><i class="ti-instagram"></i></a></li>
+                        <li class="col col-5 contact-icon"><a href="#"><i class="ti-facebook"></i></a></li>
+                        <li class="col col-5 contact-icon"><a href="#"><i class="ti-pinterest"></i></a></li>
+                        <li class="col col-5 contact-icon"><a href="#"><i class="ti-twitter-alt"></i></a></li>
+                        <li class="col col-5 contact-icon"><a href="#"><i class="ti-youtube"></i></a></li>
+                    </ul>   
+                </div>
+            </div>
+                    <!-- <div class="footer-nav">
                         
-                    </div>
+                    </div> -->
     </div>
  </body>
 </html>                
