--- a/asset/Destination.html
+++ b/asset/Destination.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-    <title>Top 5 thắng cảnh ở thành phố Kon Tum</title>
+    <title>Top 10 thắng cảnh ở thành phố Kon Tum</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,27 +43,95 @@
                 <i class="ti-search"></i>
             </div>
         </div>
+
+        <!-- CONTENT DESTINA -->
         <div class="content-destina">
-            <div>
-                <h1 class="destina-heading1">Khám phá Kon Tum</h1>
-                <p class="destina-heading2">5 địa danh nổi tiếng nhất của du lịch Kon Tum</p>
+            <div class="destina-heading">
+             <h1>Khám phá Kon Tum</h1>
             </div>
-            <div>
-                <div class="destina-item">
-                    <img src="../File-anh.img/Song-dakla.jpg" alt="Song-dakbla-TP-Kon-Tum" class="img-destina">
-                    <p>Dakble river</p>
+            <div class="row clear">
+                <div class="destina-item col col-2">
+                    <img src="../File-anh.img/Song-dakla.jpg" alt="Sông ĐăkLa Thành Phố Kon Tum" class="img-destina">
+                    <div class="heading-para">
+                        <h2 class="heading2">Sông Đăk Bla</h2>
+                        <p class="para">Sông Đăk Bla là nơi cung cấp phù sa, thuận lợi cho việc hoạt động sản xuất nông nghiệp của người dân Tây Nguyên và cũng là địa điểm du lịch konvô cùng thu hút. Ôm trọn lấy dòng sông Đăk Bla là màu xanh của cảnh sắc thiên nhiên Kon Tum</p>
+                    </div>
                 </div>
-                <div class="destina-item">
-                    <img src="" alt="">
-                    <p></p>
+                <div class="destina-item col col-2">
+                    <img src="../File-anh.img/Nha-tho-go.jpg" alt="Nhà thờ gỗ thành phố Kon Tum" class="img-destina">
+                    <div class="heading-para">
+                    <h2 class="heading2">Nhà thờ gỗ Kon Tum</h2>
+                    <p class="para">Nhà thờ Gỗ với tuổi đời hàng thế kỷ luôn quyến rũ tất cả những người tới đây bởi vẻ đẹp kiến trúc Roman độc đáo. Nằm ở đường Nguyễn Huệ, Thống Nhất, Thành phố Kon Tum, việc di chuyển đến Nhà Thờ Gỗ không có gì khó khăn. </p>
                 </div>
-                <div class="destina-item">
-                    <img src="" alt="">
-                    <p></p>
+                </div>
+            </div>
+            <div class="row clear">
+                <div class="destina-item col col-2">
+                    <img src="../File-anh.img/Thac-pa-sy.jpg" alt="Thác Pa Sỹ (Măng đen - Kon Tum)" class="img-destina">
+                    <div class="heading-para">
+                        <h2 class="heading2">Thác Pau Suh (Thác Pa Sỹ)</h2>
+                        <p class="para">Nghe cái tên có vẻ lạ khiến du khách tò mò khi đến nơi này. Điểm du lịch Kon Tum này cách trung tâm thành phố khoảng 6km, du khách chỉ mất khoảng 30 phút đồng hồ để đến được đây. Choáng ngợp trước vẻ đẹp hoang sơ của núi rừng và cảnh sắc thiên nhiên, chẳng du khách nỡ lòng nào muốn về.</p>
+                    </div>
+                </div>
+                <div class="destina-item col col-2">
+                    <img src="../File-anh.img/Cau-treo-kon-plon.jpg" alt="Cầu treo Kon Klor" class="img-destina">
+                    <div class="heading-para">
+                        <h2 class="heading2">Cầu treo Kon Klor</h2>
+                        <p class="para">Cầu treo Kon Klor trở thành niềm tự hào của người dân Kon Tum. Cây cầu nối liền hai bờ sông Đăk Bla huyền thoại. Thuộc địa phần làng Kon Klor, thành phố Kon Tum, chiếc cầu tre bằng sắt to đẹp nhất khiến bất cứ du khách nào đến đây lần đâu đều bất ngờ với chiều dài 292 m của cây cầu.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row clear">
+                <div class="destina-item col col-2">
+                    <img src="../File-anh.img/Toa-giam-muc.jpg" alt="Tòa Giám Mục Thành Phố Kon Tum" class="img-destina">
+                    <div class="heading-para">
+                        <h2 class="heading2">Tòa Giám Mục TP. Kon Tum</h2>
+                        <p class="para">Được xây dựng từ năm 1935, Toà Giám Mục là một trong những địa điểm du lịch ở Kon Tum hot thu hút du khách đến đây tham quan. Nằm gần nhà thờ Gỗ, chỉ cần đi bộ một chút là tới. Hiện ra trước mắt bạn là sự kết hợp hài hoà giữa kiến trúc Phương Tây với kiến trúc truyền thống của người Việt Nam, điểm đặc trưng của toà nhà giám mục được tạo nên từ các loại gỗ quý lâu đời.</p>
+                    </div>
+                </div>
+                <div class="destina-item col col-2">
+                    <img src="../File-anh.img/nha_rong_kon_klor_kon_tum.jpg" alt="Nhà Rông Kon Klor Kon Tum" class="img-destina">
+                    <div class="heading-para">
+                        <h2 class="heading2">Nhà Rông Kon Klor</h2>
+                        <p class="para">Nằm tại vị trí rất đẹp trên đường Trần Hưng Đạo, nhà rông Kon Klor là địa điểm du lịch Kon Tum không thể bỏ qua của du khách khi ghé thăm mảnh đất Kon Tum này. Được xây dựng theo kiểu truyền thống đậm nét văn hoá của người dân Tây Nguyên. Với chất liệu hoàn toàn bằng gỗ, tre, nứa, được các nghệ nhân khéo léo trang trí hoa văn rất tỉ mỉ, công phu.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row clear">
+                <div class="destina-item col col-2">
+                    <img src="../File-anh.img/Nui-ngoc-linh.jpg" alt="Núi Ngọc Linh TP Kon Tum" class="img-destina">
+                    <div class="heading-para">
+                        <h2 class="heading2">Núi Ngọc Linh</h2>
+                        <p class="para">Nhắc đến tên núi Ngọc Linh, chắc hẳn ít du khách nào biết đến đây là khối núi cao nhất miền Nam Việt Nam. Nằm ở độ cao khoảng 2600m, núi Ngọc Linh vô cùng nên thơ, hùng vĩ. Chưa nhiều người dám chinh phục núi Ngọc Linh huyền ảo này bởi ở đây có biết bao nhiêu câu chuyện kì bí được kể lại. Ngọn núi này chứa đựng nhiều giá trị tâm linh từ bao đời của người dân tộc thiểu số nơi đây.</p>
+                    </div>
+                </div>
+                <div class="destina-item col col-2">
+                    <img src="../File-anh.img/Vuon-quoc-gia.jpg" alt="Vườn Quốc Gia Chư Mom Ray" class="img-destina">
+                    <div class="heading-para">
+                        <h2 class="heading2">Vườn Quốc Gia Chư Mom Ray</h2>
+                        <p class="para">Cách trung tâm thành phố chừng 30km về phía Tây, du khách khi đến du lịch Kon Tum không thể bỏ qua vườn quốc gia Chư Mom Ray của Kon Tum. Đây là vườn quốc gia trong hệ thống các khu rừng đặc dụng của Việt Nam thu hút du khách ghé đến tham quan.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row clear">
+                <div class="destina-item col col-2">
+                    <img src="../File-anh.img/rung-thong-mang-den.jpg" alt="Rừng thông Măng Đen" class="img-destina">
+                    <div class="heading-para">
+                        <h2 class="heading2">Rừng thông Măng Đen (Hay còn được gọi là Đà Lạt thứ 2)</h2>
+                        <p class="para">Nằm trong khu du lịch sinh thái Măng Đen, ở độ cao hơn 1000m mang đặc trưng khí hậu nhiệu đới ẩm gió mùa. Mát mẻ quanh năm nên khi nhắc tới tên rùng thông Măng Đen khiến bạn liên tưởng tới ngay “rừng thông Đà Lạt”.</p>
+                    </div>
+                </div>
+                <div class="destina-item col col-2">
+                    <img src="../File-anh.img/Thac-ya-li.jpg" alt="Thác Yaly" class="img-destina">
+                    <div class="heading-para">
+                        <h2 class="heading2">Thác Yaly</h2>
+                        <p class="para">Từ thành phố Pleiku, du khách theo quốc lộ 14 đến thị trấn Phú Hoà khoảng 15km sẽ thấy đường rẽ vào thác Yaly. Đây cũng là một trong những địa điểm du lịch ở Kon Tum “hot” thu hút du khách đến đây.</p>
+                    </div>
                 </div>
             </div>
         </div>
-
+        <div class="clear"></div>
+        <!-- FOOTER -->       
         <div id="footer">
             <div class="footer-contact text-center">
                 <div class="footer-list">
@@ -76,9 +144,9 @@
                     </ul>   
                 </div>
             </div>
-            <div class="footer-nav">
+            <!-- <div class="footer-nav">
                 
-            </div>
+            </div> -->
     </div>
  </body>
 </html>                
