--- a/asset/Service.html
+++ b/asset/Service.html
@@ -43,22 +43,64 @@
                 <i class="ti-search"></i>
             </div>
         </div>
-        
-                <div id="footer">
-                    <div class="footer-contact text-center">
-                        <div class="footer-list">
-                            <ul>
-                              <li class="col col-5 contact-icon"><a href="#"><i class="ti-instagram"></i></a></li>
-                              <li class="col col-5 contact-icon"><a href="#"><i class="ti-facebook"></i></a></li>
-                              <li class="col col-5 contact-icon"><a href="#"><i class="ti-pinterest"></i></a></li>
-                              <li class="col col-5 contact-icon"><a href="#"><i class="ti-twitter-alt"></i></a></li>
-                              <li class="col col-5 contact-icon"><a href="#"><i class="ti-youtube"></i></a></li>
-                            </ul>   
-                        </div>
-                    </div>
-                    <div class="footer-nav">
+        <!-- Content -->
+        <div id="content-service">
+            <div class="service-heading">
+                <h1>Kon Tum - Khách sạn với ưu đãi tốt nhất</h1>
+            </div>
+            <div class="box-service row">
+                <div class="box-img-service col col-4">
+                    <img class="img-service" src="../File-anh.img/hotel1.jpg" alt="">
+                </div>
+                <div class="inf-service col col-75">
+                    <h2>Bac Huong Hotel</h2>
+                    <h3>Khách sạn ở Kon Tum</h3>
+                    <p>Nằm ở thành phố Kon Tum, cách Tòa Giám mục Kon Tum 1 km, Bac Huong Hotel cung cấp chỗ nghỉ với WiFi miễn phí và chỗ đỗ xe riêng miễn phí.</p><hr>
+                    <p> Staff is good, kinda helpful. Good price, good location.</p>
+                    <button type="submit" class="buy-btn">Kiểm tra phòng trống</button>
+                </div>
+            </div>
+            <div class="box-service row">
+                <div class="box-img-service col col-4">
+                    <img class="img-service" src="../File-anh.img/hotel2.jpg" alt="">
+                </div>
+                <div class="inf-service col col-75">
+                    <h2>KonKlor Hotel</h2>
+                    <h3>Khách sạn ở Kon Tum</h3>
+                    <p>Konklor Hotel tọa lạc tại thành phố Kon Tum (2). Wi-Fi được cung cấp miễn phí. Mỗi phòng nghỉ ở đây đều có TV, máy lạnh và minibar.</p><hr>
+                    <p>Khách sạn đẹp, yên tĩnh, sạch sẽ, nhân viên thân thiện, bãi đỗ xe rộng rãi, an toàn. Mỗi gia đình được ở mỗi căn nhà riêng biệt vô cùng thoải mái, vô cùng xứng đáng với số tiền bỏ ra để trải nghiệm nơi này. Kon Klor là lựa chọn lưu trú số 01 ở KonTum.</p>
+                    <button type="submit" class="buy-btn">Kiểm tra phòng trống</button>
+                </div>
+            </div>
+            <div class="box-service row">
+                <div class="box-img-service col col-4">
+                    <img class="img-service" src="../File-anh.img/hotel3.jpg" alt="">
+                </div>
+                <div class="inf-service col col-75">
+                    <h2>Thanh Thu 1 Hotel</h2>
+                    <h3>Khách sạn ở Kon Tum</h3>
+                    <p>Nằm ở thành phố Kon Tum, cách Tòa Giám mục Kontum 2,2 km, Thanh Thu 1 Hotel cung cấp chỗ nghỉ với sân hiên và chỗ đỗ xe riêng miễn phí.</p><hr>
+                    <p>Vị trí ngay trung tâm thành phố, thuận tiện đi lại. Nhân viên rất thân thiện nhiệt tình, phòng dọn sạch sẽ. Đồ ăn và nước uống trong phòng là điểm cộng lớn, đa dạng nhiều loại. Giá rẻ so với chất lượng!</p>
+                    <button type="submit" class="buy-btn">Kiểm tra phòng trống</button>
+                </div>
+            </div>
+        </div>
+        <div class="clear"></div>
+        <div id="footer">
+            <div class="footer-contact text-center">
+                 <div class="footer-list">
+                     <ul>
+                        <li class="col col-5 contact-icon"><a href="#"><i class="ti-instagram"></i></a></li>
+                        <li class="col col-5 contact-icon"><a href="#"><i class="ti-facebook"></i></a></li>
+                        <li class="col col-5 contact-icon"><a href="#"><i class="ti-pinterest"></i></a></li>
+                        <li class="col col-5 contact-icon"><a href="#"><i class="ti-twitter-alt"></i></a></li>
+                        <li class="col col-5 contact-icon"><a href="#"><i class="ti-youtube"></i></a></li>
+                    </ul>   
+                </div>
+        </div>
+                    <!-- <div class="footer-nav">
                         
-                    </div>
+                    </div> -->
     </div>
  </body>
 </html>                
