--- a/index.html
+++ b/index.html
@@ -63,9 +63,29 @@
                 <p>Experience Travel Differently</p>
             </div>
         </div>
+        <div class="clear"></div>
 
         <div id="content">
-
+            <div class="content-home">
+                 <div class="row">
+                    <div class="content-item col col-2">
+                        <img src="./File-anh.img/Song-dakla.jpg" alt="Sông ĐăkLa Thành Phố Kon Tum" class="img-home">
+                        <div class="heading-para">
+                            <h2 class="heading2">Sông Đăk Bla</h2>
+                            <p class="para">Sông Đăk Bla là nơi cung cấp phù sa, thuận lợi cho việc hoạt động sản xuất nông nghiệp của người dân Tây Nguyên và cũng là địa điểm du lịch konvô cùng thu hút. Ôm trọn lấy dòng sông Đăk Bla là màu xanh của cảnh sắc thiên nhiên Kon Tum, không gian trong lành tạo cảm giác thoải mái, thư giãn cho bất kể du khách nào đặt chân tới đây</p>
+                        </div>
+                    </div>
+                    <div class="content-item col col-2">
+                        <img src="./File-anh.img/Nha-tho-go.jpg" alt="Nhà thờ gỗ thành phố Kon Tum" class="img-home">
+                        <div class="heading-para">
+                        <h2 class="heading2">Nhà thờ gỗ Kon Tum</h2>
+                        <p class="para">Nhà thờ Gỗ với tuổi đời hàng thế kỷ luôn quyến rũ tất cả những người tới đây bởi vẻ đẹp kiến trúc Roman độc đáo. Nằm ở đường Nguyễn Huệ, Thống Nhất, Thành phố Kon Tum, việc di chuyển đến Nhà Thờ Gỗ không có gì khó khăn. </p>
+                    </div>
+                    </div>
+                </div>
+                <div class="toi-diem-den"><a href="./asset/Destination.html">XEM THÊM TẠI ĐÂY</a></div>
+                </div>
+            <div class="clear"></div>
         </div>
 
         <div id="footer">
